--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/stopwatch_height"
+                android:layout_height="wrap_content"
                 android:id="@+id/stopwatchfragment"
                  />
         </LinearLayout>
