--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -31,6 +31,7 @@
             android:hint="@string/sign_in_edit_email"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
+            android:singleLine="true"
             />
         <EditText
             android:layout_width="match_parent"
@@ -40,7 +41,7 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
             android:inputType="textPassword"
-
+            android:singleLine="true"
             />
 
         <Button
