--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -31,6 +31,7 @@
         android:hint="@string/sign_up_edit_username"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
+        android:singleLine="true"
         />
     <EditText
         android:layout_width="match_parent"
@@ -39,6 +40,7 @@
         android:hint="@string/sign_up_edit_email"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
+        android:singleLine="true"
         />
     <EditText
         android:layout_width="match_parent"
@@ -48,6 +50,7 @@
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:inputType="textPassword"
+        android:singleLine="true"
         />
     <EditText
         android:layout_width="match_parent"
@@ -57,6 +60,7 @@
         android:paddingBottom="20dp"
         android:inputType="textPassword"
         android:hint="@string/sign_up_edit_pass_vertify"
+        android:singleLine="true"
         />
         <Button
             android:layout_width="wrap_content"
