--- a/app/src/main/res/layout/activity_analytics.xml
+++ b/app/src/main/res/layout/activity_analytics.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.SettingActivity">
+    tools:context=".Activity.AnalyticsActivity">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/frame">
+
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
